--- a/style.css
+++ b/style.css
@@ -8,62 +8,104 @@
 body{
     width: 100%;
     height: 100vh;
-    background-color: lightseagreen;
+    background-color: #20b2aa;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-div.content > div.underline{
+main{
+    width: 80%;
+    max-width: 400px;
+    height: min-content;
+    max-height: 60%;
+    padding: 10px;
+    padding-top: 20px;
+    background-color: #ffffff;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    gap: 5px;
+}
+
+.relative{
+    position: relative;
+    margin: 10px 0px;
+    width: 80%;
+    max-width: 200px;
+}
+
+main > div.relative div.underline{
     position: absolute;
     height: 2px;
     width: 100%;
     bottom: 0;    
 }
 
-div.content > div.underline::before{
+main > div.relative > div.underline::before{
     position: absolute;
     content: '';
     height: 100%;
     width: 100%;
-    background-color: darkblue;
+    background-color: #00008b;
     transform: scaleX(0);
     transform-origin: center;
     transition: transform 0.3s ease;
 }
 
-div.content > input:focus ~ div.underline::before,
-div.content > input:valid ~ div.underline::before{
+main > div.relative > input:focus ~ div.underline::before,
+main > div.relative > input:valid ~ div.underline::before{
     transform: scaleX(1);
 }
 
-div.content{
-    height: 30px;
-    width: 200px;
-    position: relative;
-}
 
-div.content > input{
+main > div.relative > input{
     height: 100%;
     width: 100%;
     outline: none;
     border: none;
     font-size: 16px;
+    z-index: 1; /* Coloca a label atrás do input */
+    cursor: pointer;
 }
 
-div.content > input:focus ~ label,
-div.content > input:valid ~ label{
+main > div.relative > input:focus ~ label,
+main > div.relative > input:valid ~ label{
     transform: translateY(-20px);
-    font-size: 20px;
-    bottom: 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    bottom: 0px;
 }
 
-div.content > label{
+main > div.relative > label{
     position: absolute;
-    bottom: 10px;
+    bottom: 0px;
     left: 1px;
-    color: black;
+    color: #000000;
     transition: all .3s ease;
+    cursor: pointer;
+    z-index: 0;
+    pointer-events: none; /* Permite que o clique passe pela label para o input */
+}
+
+button.Login{ 
+    border: 1.5px solid #00008b;
+    outline: none;
+    border-radius: 20px;
+    padding: 3px 5px;
+    background-color: transparent;
+    color: #000000;
+}
+
+button.Login:hover,
+button.Login:focus{
+    cursor: pointer;
+    font-weight: bold;
+    background-color: rgba(127, 255, 212, 0.20);
+    transition: all 0.3s ease;
+    box-shadow: 0 0 10px #3498db; /* Aumenta o espalhamento da borda */
 }
 
 
